[package]
name = "option-extra"
version = "0.1.0"
description = "Additional utilities for Rust's Option type"
edition = "2021"
license = "MIT"
repository = "https://github.com/tranzystorek-io/option-extra"
keywords = ["library", "utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
